@@ -1,2 +1,14 @@
-EBUILD mod_asn-30.ebuild 705 RMD160 85b3aea9ee06abb647421be30f2f1a8ef64c3eea SHA1 8089c02240af9788b736e4d6e2102fcba22ea07e SHA256 9152df1ae0e22d6131d0c57a2a06c54455ef56bc7f1cda234499edb6a771901e
-MISC ChangeLog 197 RMD160 921ef5fa3ef6f4b624cb669e7f7d39a01a3b6e51 SHA1 0fb70bda08b337428f19b12f67d1162c829d25ff SHA256 434fe78164e511dc3e702be9090c84575953ae4457dbc8e54b0f36eb20241aa8
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX 30_mod_asn.conf 97 RMD160 acbd09f09d50ff3204ee7daa06f6df853a8d0d4f SHA1 a773800f8fce9c88e9192cd3084ee5b79fcde655 SHA256 bac00ab4084e1a1df1b4b5a66708060597b65998662e180385f628aee459400d
+EBUILD mod_asn-1.2.ebuild 659 RMD160 814964d4f0ea5ce8927e74c75f5a6b5b3ff10159 SHA1 7f6091a4a04fc79c61b2bbc6db1e433ff82cd868 SHA256 a8ab3c21a2139caa826847097e2292664fc6bcb4bb0dfe67d7bed2581fcf20b1
+MISC ChangeLog 456 RMD160 596a5fe70ba0a9cdf1a7bec3e9fa6776ddadfa28 SHA1 0d87356fd011da2079ca61e3023d9fc2688aeec1 SHA256 9d38ec976a6ddaa35acbd781346114f5ee537b4841ac17f19e2b54ab5473797f
+MISC metadata.xml 363 RMD160 5044e3fa95a31936f6be5e4e95a84725b382a5d4 SHA1 185523bcdd1175016489e3a0385d1d085318a2ca SHA256 55dccd3f642cf5f8c99c158990805fca27ea49a1e2a81869f31280d5c18d9b69
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlTVwQW+hXSf0t0IRAvZUAKC4PnzII29LzsxaNuCdDYfpHTpX6QCgyK7h
+vQvQr95933PygI98fyYml5k=
+=5WlC
+-----END PGP SIGNATURE-----
