@@ -1,0 +1,5 @@
+<IfDefine ASN>
+LoadModule asn_module modules/mod_asn.so
+</IfDefine>
+
+# vim: ts=4 filetype=apache
