@@ -5,16 +5,16 @@
 inherit apache-module subversion
 
 DESCRIPTION="Apache module which does AS and network prefix lookups"
-HOMEPAGE="http://mirrorbrain.org/news_items/mod_asn_-_Apache_module_to_look_up_routing_data"
+HOMEPAGE="http://mirrorbrain.org/mod_asn"
 LICENSE="Apache-2.0"
-ESVN_REPO_URI="http://svn.poeml.de/svn/mod_asn/trunk@${PV}"
+ESVN_REPO_URI="http://mirrorbrain.org/files/releases/${P}.tar.gz"
 
 KEYWORDS="~x86 ~amd64"
 IUSE=""
 SLOT="0"
 
 # See apache-module.eclass for more information.
-#APACHE2_MOD_CONF="30_${PN}"
+APACHE2_MOD_CONF="30_${PN}"
 
 src_install() {
 	apache-module_src_install
